--- a/Index.html
+++ b/Index.html
@@ -16,32 +16,32 @@
   /* Neon glow effect for title */
   h1 {
     position: fixed;
-    top: 10px;
+    top: 20px;
     width: 100%;
     text-align: center;
-    font-size: 3em;
+    font-size: 5em; /* Bigger title */
     color: #ff0000;
     text-shadow:
-      0 0 5px #ff0000,
       0 0 10px #ff0000,
       0 0 20px #ff0000,
-      0 0 40px #ff0000;
+      0 0 40px #ff0000,
+      0 0 80px #ff0000;
     z-index: 10;
   }
 
   /* Neon box for navigation */
   .neon-box {
     position: fixed;
-    top: 120px;
+    top: 180px;
     left: 50%;
     transform: translateX(-50%);
-    border: 2px solid #ff0000;
-    padding: 20px;
+    border: 4px solid #ff0000; /* Thicker border */
+    padding: 30px 40px; /* Bigger padding */
     background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000 inset;
-    border-radius: 10px;
+    box-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000 inset;
+    border-radius: 15px;
     display: flex;
-    gap: 20px;
+    gap: 40px; /* More space between links */
     z-index: 10;
   }
 
@@ -50,18 +50,18 @@
     color: #ff0000;
     text-decoration: none;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 2em; /* Bigger links */
     text-shadow:
-      0 0 5px #ff0000,
-      0 0 10px #ff0000;
+      0 0 10px #ff0000,
+      0 0 20px #ff0000;
     transition: all 0.3s ease;
   }
 
   .neon-box a:hover {
     color: #ffffff;
     text-shadow:
-      0 0 10px #ffffff,
-      0 0 20px #ffffff;
+      0 0 15px #ffffff,
+      0 0 30px #ffffff;
   }
 
   /* Canvas for snow remains unchanged */
@@ -78,7 +78,7 @@
   /* Search bar container fixed at the bottom */
   .search-container {
     position: fixed;
-    bottom: 150px; /* position at bottom with some margin */
+    bottom: 300px; /* moved slightly higher to match bigger size */
     width: 100%;
     display: flex;
     justify-content: center;
@@ -87,26 +87,27 @@
 
   /* Neon search input styles with glow */
   .neon-search {
-    padding: 10px 20px;
-    font-size: 1.2em;
-    border: 2px solid #ff0000;
-    border-radius: 8px;
+    padding: 20px 40px; /* Bigger box */
+    font-size: 2em; /* Bigger text */
+    border: 3px solid #ff0000;
+    border-radius: 12px;
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
     outline: none;
     box-shadow:
-      0 0 10px #ff0000,
-      0 0 20px #ff0000 inset,
-      0 0 30px #ff0000;
+      0 0 20px #ff0000,
+      0 0 40px #ff0000 inset,
+      0 0 60px #ff0000;
     transition: all 0.3s ease;
+    width: 50%; /* Wider */
   }
 
   /* Neon glow on focus */
   .neon-search:focus {
     box-shadow:
-      0 0 15px #ff0000,
-      0 0 30px #ff0000 inset,
-      0 0 40px #ff0000;
+      0 0 25px #ff0000,
+      0 0 50px #ff0000 inset,
+      0 0 70px #ff0000;
   }
 </style>
 </head>
@@ -118,7 +119,7 @@
 <div class="neon-box">
   <a href="#home">Home</a>
   <a href="#about">About</a>
-  <a href="https://navisgames3.netlify.app/" target="_blank" rel="noopener noreferrer">Games</a>
+  <a href="https://coruscating-blancmange-cfd976.netlify.app" target="_blank" rel="noopener noreferrer">Games</a>
   <a href="#contact">Contact</a>
 </div>
 
@@ -153,8 +154,8 @@
     reset() {
       this.x = Math.random() * canvas.width;
       this.y = Math.random() * -canvas.height;
-      this.size = Math.random() * 2 + 1;
-      this.speedY = Math.random() * 1 + 0.5;
+      this.size = Math.random() * 3 + 2; // Bigger snowflakes
+      this.speedY = Math.random() * 1.5 + 0.5;
       this.speedX = Math.random() * 0.5 - 0.25;
       this.opacity = Math.random() * 0.5 + 0.5;
     }
@@ -185,7 +186,7 @@
 
   function init() {
     particlesArray = [];
-    const numberOfParticles = 200;
+    const numberOfParticles = 250; // more snowflakes
     for (let i = 0; i < numberOfParticles; i++) {
       particlesArray.push(new Snowflake());
     }
@@ -206,5 +207,3 @@
 
 </body>
 </html>
-
-
