--- a/Index.html
+++ b/Index.html
@@ -128,7 +128,7 @@
 
 <!-- Search bar fixed at Bottom -->
 <div class="search-container">
-  <input type="text" class="neon-search" placeholder="Search...">
+  <input type="text" class="neon-search" placeholder="🔎Search...">
 </div>
 
 <script>
@@ -207,3 +207,4 @@
 
 </body>
 </html>
+
