--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>NavisGames v3</title>
 <style>
-  /* Reset and basic styles */
   body {
     margin: 0;
     background-color: black;
@@ -13,58 +12,51 @@
     font-family: Arial, sans-serif;
   }
 
-  /* Neon glow effect for title */
   h1 {
     position: fixed;
     top: 20px;
     width: 100%;
     text-align: center;
-    font-size: 5em; /* Bigger title */
+    font-size: 5em;
     color: #ff0000;
-    text-shadow:
-      0 0 10px #ff0000,
-      0 0 20px #ff0000,
-      0 0 40px #ff0000,
-      0 0 80px #ff0000;
+    text-shadow: 0 0 10px #ff0000,
+                 0 0 20px #ff0000,
+                 0 0 40px #ff0000,
+                 0 0 80px #ff0000;
     z-index: 10;
   }
 
-  /* Neon box for navigation */
   .neon-box {
     position: fixed;
     top: 180px;
     left: 50%;
     transform: translateX(-50%);
-    border: 4px solid #ff0000; /* Thicker border */
-    padding: 30px 40px; /* Bigger padding */
+    border: 4px solid #ff0000;
+    padding: 30px 40px;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000 inset;
     border-radius: 15px;
     display: flex;
-    gap: 40px; /* More space between links */
+    gap: 40px;
     z-index: 10;
   }
 
-  /* Links inside the neon box */
   .neon-box a {
     color: #ff0000;
     text-decoration: none;
     font-weight: bold;
-    font-size: 2em; /* Bigger links */
-    text-shadow:
-      0 0 10px #ff0000,
-      0 0 20px #ff0000;
+    font-size: 2em;
+    text-shadow: 0 0 10px #ff0000,
+                 0 0 20px #ff0000;
     transition: all 0.3s ease;
   }
 
   .neon-box a:hover {
     color: #ffffff;
-    text-shadow:
-      0 0 15px #ffffff,
-      0 0 30px #ffffff;
+    text-shadow: 0 0 15px #ffffff,
+                 0 0 30px #ffffff;
   }
 
-  /* Canvas for snow remains unchanged */
   canvas {
     display: block;
     position: fixed;
@@ -75,47 +67,60 @@
     z-index: 1;
   }
 
-  /* Search bar container fixed at the bottom */
   .search-container {
     position: fixed;
-    bottom: 300px; /* moved slightly higher to match bigger size */
+    bottom: 300px;
     width: 100%;
     display: flex;
     justify-content: center;
     z-index: 10;
   }
 
-  /* Neon search input styles with glow */
   .neon-search {
-    padding: 20px 40px; /* Bigger box */
-    font-size: 2em; /* Bigger text */
+    padding: 20px 40px;
+    font-size: 2em;
     border: 3px solid #ff0000;
     border-radius: 12px;
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
     outline: none;
-    box-shadow:
-      0 0 20px #ff0000,
-      0 0 40px #ff0000 inset,
-      0 0 60px #ff0000;
+    box-shadow: 0 0 20px #ff0000,
+                0 0 40px #ff0000 inset,
+                0 0 60px #ff0000;
     transition: all 0.3s ease;
-    width: 50%; /* Wider */
+    width: 50%;
   }
 
-  /* Neon glow on focus */
   .neon-search:focus {
-    box-shadow:
-      0 0 25px #ff0000,
-      0 0 50px #ff0000 inset,
-      0 0 70px #ff0000;
+    box-shadow: 0 0 25px #ff0000,
+                0 0 50px #ff0000 inset,
+                0 0 70px #ff0000;
   }
 
-  /* Hide YouTube player but keep audio */
+  /* Hidden YouTube player */
   .bg-music {
     position: absolute;
     width: 0;
     height: 0;
     opacity: 0;
+  }
+
+  /* Play button */
+  #playMusic {
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 20px 40px;
+    font-size: 1.5em;
+    background: black;
+    color: #ff0000;
+    border: 3px solid #ff0000;
+    border-radius: 12px;
+    cursor: pointer;
+    text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
+    box-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000 inset;
+    z-index: 20;
   }
 </style>
 </head>
@@ -123,7 +128,6 @@
 
 <h1>Navis Games V3</h1>
 
-<!-- Neon navigation box -->
 <div class="neon-box">
   <a href="#home">Home</a>
   <a href="#about">About</a>
@@ -131,29 +135,26 @@
   <a href="#contact">Contact</a>
 </div>
 
-<!-- Snow canvas -->
 <canvas id="snow"></canvas>
 
-<!-- Search bar fixed at Bottom -->
 <div class="search-container">
   <input type="text" class="neon-search" placeholder="🔎Search...">
 </div>
 
-<!-- Background Music (YouTube) -->
-<iframe class="bg-music"
-  src="https://www.youtube.com/embed/ivPEtR70_Fg?autoplay=1&loop=1&playlist=ivPEtR70_Fg"
-  frameborder="0"
-  allow="autoplay">
-</iframe>
+<!-- Play Music Button -->
+<button id="playMusic">🎵 Play Music</button>
+
+<!-- YouTube hidden player -->
+<iframe id="ytplayer" class="bg-music"
+  src="https://www.youtube.com/embed/ivPEtR70_Fg?enablejsapi=1&loop=1&playlist=ivPEtR70_Fg"
+  frameborder="0" allow="autoplay"></iframe>
 
 <script>
   // Snow falling effect
   const canvas = document.getElementById('snow');
   const ctx = canvas.getContext('2d');
-
   let particlesArray;
 
-  // Resize canvas
   function resizeCanvas() {
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
@@ -162,33 +163,20 @@
   resizeCanvas();
 
   class Snowflake {
-    constructor() {
-      this.reset();
-    }
-
+    constructor() { this.reset(); }
     reset() {
       this.x = Math.random() * canvas.width;
       this.y = Math.random() * -canvas.height;
-      this.size = Math.random() * 3 + 2; // Bigger snowflakes
+      this.size = Math.random() * 3 + 2;
       this.speedY = Math.random() * 1.5 + 0.5;
       this.speedX = Math.random() * 0.5 - 0.25;
       this.opacity = Math.random() * 0.5 + 0.5;
     }
-
     update() {
-      this.y += this.speedY;
-      this.x += this.speedX;
-
-      if (this.y > canvas.height) {
-        this.y = -this.size;
-        this.x = Math.random() * canvas.width;
-      }
-
-      if (this.x > canvas.width || this.x < 0) {
-        this.x = Math.random() * canvas.width;
-      }
+      this.y += this.speedY; this.x += this.speedX;
+      if (this.y > canvas.height) { this.y = -this.size; this.x = Math.random() * canvas.width; }
+      if (this.x > canvas.width || this.x < 0) { this.x = Math.random() * canvas.width; }
     }
-
     draw() {
       ctx.globalAlpha = this.opacity;
       ctx.fillStyle = '#ffffff';
@@ -201,23 +189,23 @@
 
   function init() {
     particlesArray = [];
-    const numberOfParticles = 250; // more snowflakes
-    for (let i = 0; i < numberOfParticles; i++) {
-      particlesArray.push(new Snowflake());
-    }
+    for (let i = 0; i < 250; i++) { particlesArray.push(new Snowflake()); }
   }
 
   function animate() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    for (let particle of particlesArray) {
-      particle.update();
-      particle.draw();
-    }
+    for (let particle of particlesArray) { particle.update(); particle.draw(); }
     requestAnimationFrame(animate);
   }
 
-  init();
-  animate();
+  init(); animate();
+
+  // Music button logic
+  document.getElementById("playMusic").addEventListener("click", function() {
+    let player = document.getElementById("ytplayer").contentWindow;
+    player.postMessage('{"event":"command","func":"playVideo","args":""}', '*');
+    this.style.display = "none"; // Hide button after click
+  });
 </script>
 
 </body>
